src/main/java/org/example/springsec/ecomm/error/RecordNotFoundException.java
package org.example.springsec.ecomm.error;

public class RecordNotFoundException extends RuntimeException {
    public RecordNotFoundException(String message) {
        super(message);
    }
}
